@@ -9,6 +9,7 @@ o The gsh exit code is aggregated from all remote shells taking the max.
 o :export_rank has been renamed to :export_vars as it now also exports the
 hostname.
 o Added a --password-file to login using a password.
+o The file transfer feature now works even if the gsh source is in a ZIP file.
 
 
 0.3
